Add branch to push list for testing

--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
       - "master"
+      # Remember to delete this after testing !! 
+      - "github-action"
 
 jobs:
   test:
