--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        uses: yarn install
+        run: yarn install
 
       - name: Run Jest tests
         run: yarn test
